# lupesource

./: .gitignore  .lupeignore  AGENTS.md  Cargo.toml  README.md
docs/todo/done/: 01-branches-schema.md  02-workspace-branch-routing.md  03-branch-commands.md  04-kill-dead-nodes.md  05-realtime-sse.md  06-web-ui-branches.md
lupe-cli/src/: main.rs
lupe-core/src/: lib.rs
lupe-server/src/: main.rs
scripts/: lupe-stop-hook.py
skills/lupe-agent/: SKILL.md
skills/lupe-agent-install/: SKILL.md
src/: main.rs
web/: package-lock.json  package.json
web/src/: App.tsx  CheckpointNode.tsx  Detail.tsx  FileDiff.tsx  Timeline.tsx  index.css  layout.ts  types.ts
