[package]
name = "lupehub"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lupe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
mime_guess = "2"
open = "5"
rust-embed = "8"
similar = "2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
walkdir = "2"
